--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="path/to/materialize.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet"> 
+    <link rel="stylesheet" href="../node_modules/materialize-social/materialize-social.css">
 <!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCIWY8PfPidEitFLloWMSv20DPx-4Ayow"></script>-->
     <!--
       manifest.json provides metadata used when your web app is installed on a
