revisi, add kontak

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet"> 
-    <link rel="stylesheet" href="../node_modules/materialize-social/materialize-social.css">
 <!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCIWY8PfPidEitFLloWMSv20DPx-4Ayow"></script>-->
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>vi0letmist</title>
   </head>
   <body>
     <div id="root"></div>
